fix: retina mbp align error on keyboard page [publish]

--- a/site/_sass/_things.scss
+++ b/site/_sass/_things.scss
@@ -11,10 +11,6 @@
     padding-bottom: 1rem;
     width: 100%;
 
-    &:last-child {
-      border: 0;
-    }
-
     .things-title {
       color: $dark-9;
       font-size: 1rem;
